More robust handling of leading/trailing whitespaces (XERCESC-1838).

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@743755 13f79535-47bb-0310-9956-ffa450edef68